# bookmarks-cli

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
bookmarks_cli/: __main__.py  cli.py  config.py  enrichment.py  frontmatter.py  models.py  query.py  storage.py  x_auth.py
bookmarks_cli/integrations/: x_bookmarks.py
docs/: agent-retrieval-plan.md  architecture.md  query.md  schema.md  x-auth.md  x-bookmarks.md
integrations/x/: README.md
integrations/x/samples/: bookmarks.sample.json
personal_os/: __main__.py  cli.py  config.py  models.py  query.py  storage.py  x_auth.py
personal_os/integrations/: x_bookmarks.py
processing/: README.md
prompts/: README.md  influence_enrichment.md
schemas/: influence-item.schema.json
scripts/: bookmarks-cli  bookmarks_cli.py  personal-os  personal_os.py
tests/: test_cli.py  test_cli_integration.py  test_config.py  test_enrichment.py  test_frontmatter.py  test_query.py  test_x_auth.py  test_x_bookmarks.py
