[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmarks-cli"
version = "0.1.0"
description = "CLI for syncing X bookmarks and other saved content into portable Markdown."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Vignir" }]
license = { text = "MIT" }

[project.scripts]
bookmarks-cli = "bookmarks_cli.cli:main"

[tool.setuptools]
packages = ["bookmarks_cli", "bookmarks_cli.integrations"]
